fix contribute banner padding on mobile

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -353,6 +353,7 @@ html.android .download .button-ios {
 
             @media only screen and (max-width: $breakpoint) {
               background-position: right -64px bottom -16px;
+              padding-right: 24px;
             }
         }
 
